--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -23,7 +23,17 @@
   }
 
   .quantity {
-    padding-left: 20px;
+    // padding-left: 20px;
+    display: flex;
+
+    .arrow {
+      // display: inline-flex;
+      cursor: pointer;
+    }
+
+    .value {
+      margin: 0 10px;
+    }
   }
 
   .remove-button {
